Changelog
=========

0.4.0 – unreleased
------------------

- Fixed an issue of 'zope2.Public' not mapped to 'zope.Public' when confiuring
  products during reload.


0.3.3 – 2011-10-17
------------------

- Fixed an issue in initializing more than one reloaded Archetype products.

0.3.2 – 2011-08-21
------------------

- Fixed to work better with PdbSublimeText/TextMateSupport.
- README-updates (mainly for exluding zcmls from reload).


0.3.1 – 2011-08-19
------------------

- Support for Five-initialized products (e.g. Archetypes) on Plone 4.1.
- Licensed under ZPL.

0.3.0 – 2011-08-12
------------------

- Support Plone 4.1
- Heavily edited readme [miohtama]
- Show nice error log message if product installation failed to defer ie. is
  not reloadable.

0.2.1 – 2011-08-03
------------------

- Add INewChildIsReady event and move INewChildForked event
- Remove overly used prints and use logging
- Can now reload __init__.py from package root


0.2.0 – 2011-08-04
------------------

- Support for Five-initialized products (e.g. Archetypes).
- Browser View for manual reloading
- Emit INewChildForked events
- Many bug fixes

0.1.1 – 2011-08-03
------------------

- Added missing egg description.
- Added forgotten reload for localizations.
- Prefixed commands in README with $.

0.1.0 – 2011-08-03
------------------

- First experimental release.