@@ -7,7 +7,6 @@
       handler=".eventhandlers.startForkLoop"
       />
 
-
   <browser:page
     name="saunareload"
     for="OFS.interfaces.IApplication"
@@ -16,5 +15,6 @@
     template="saunareload.pt"
     />
 
+  <include package=".plugins" />
 
 </configure>
